working to make ui better

--- a/app/src/main/res/drawable/bg_amount.xml
+++ b/app/src/main/res/drawable/bg_amount.xml
@@ -27,7 +27,7 @@
         android:bottom="6dp">
         <bitmap
 
-            android:src="@drawable/small_notebook">
+            android:src="@drawable/img_small_notebook">
 
         </bitmap>
     </item>
