--- a/app/src/main/res/drawable/bg_reminder.xml
+++ b/app/src/main/res/drawable/bg_reminder.xml
@@ -26,7 +26,7 @@
         android:bottom="6dp">
         <bitmap
 
-            android:src="@drawable/notebook">
+            android:src="@drawable/img_notebook">
 
         </bitmap>
     </item>
