--- a/app/src/main/res/drawable/frame_reminder.xml
+++ b/app/src/main/res/drawable/frame_reminder.xml
@@ -6,13 +6,13 @@
 
     <shape
         android:shape="rectangle">
-        <solid android:color="#008000" />
+        <solid android:color="@color/background_color_green" />
         <corners android:radius="6dip" />
     </shape>
 </item>
 
     <item
-        android:left="12dp">
+        android:left="9dp">
         <shape
             android:shape="rectangle">
             <solid android:color="#FFFFFF" />
