--- a/app/src/main/res/layout/frame_top_layout.xml
+++ b/app/src/main/res/layout/frame_top_layout.xml
@@ -1,42 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
+    android:layout_height="50dp"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:id="@+id/relativeLayout_top_frame">
 
+        <Button
 
-    <Button
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="8dp"
-        android:layout_width="235dp"
-        android:layout_height="45dp"
-        android:background="@color/background_color_green"
-        android:drawableLeft="@mipmap/ic_plus_padding"
+            android:layout_marginRight="10dp"
+            android:layout_width="235dp"
+            android:layout_height="38dp"
+            android:background="@drawable/style_button"
+            android:drawableLeft="@drawable/add_item"
+            android:text="@string/add_b"
+            android:id="@+id/button_add"
+            android:textColor="@color/background_color_yellow_l"
+            android:onClick="onAddNewWine"
+            android:clickable="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
+        </Button>
 
-        android:text="@string/add_b"
-        android:padding="5dp"
-
-
-        android:id="@+id/button_add"
-        android:textColor="@color/background_color_white"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
-
-
-    </Button>
 
     <TextView
         android:layout_marginLeft="164dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="ДАШБОРД"
+        android:text="@string/dashboard_name"
         android:textColor="@color/background_color_white"
         android:id="@+id/textView_dashboard"
         android:layout_centerVertical="true"
