--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_wood_background"
-    android:orientation="vertical">
+    android:background="@drawable/img_wood_background">
+
+
 
     <android.support.v7.widget.CardView
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="230dp"
         android:id="@+id/card_view_main"
         android:layout_width="420dp"
-        android:layout_height="345dp"
+        android:layout_height="320dp"
         card_view:cardCornerRadius="@dimen/card_album_radius"
-       >
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
 
         <LinearLayout
             android:orientation="vertical"
@@ -29,10 +30,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Винный погреб"
+                android:text="@string/name"
                 android:id="@+id/textView2"
                 android:layout_gravity="center_horizontal" />
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateDrawable="@drawable/spinner_ring"
+                android:indeterminateOnly="true"
+                android:id="@+id/progress_bar"
+                android:visibility="invisible"
+                android:layout_gravity="center_horizontal" />
 
             <EditText
                 android:layout_marginTop="10dp"
@@ -42,14 +51,15 @@
                 android:layout_height="wrap_content"
 
                 android:id="@+id/edit_login"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:inputType="none" />
 
             <TextView
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Логин"
+                android:text="@string/login"
                 android:id="@+id/text_login" />
 
             <EditText
@@ -68,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Пароль"
+                android:text="@string/pass"
                 android:id="@+id/textView3"
                 android:layout_gravity="center_horizontal" />
 
@@ -78,24 +88,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Логин или пароль неверен"
+                android:text="@string/bad"
                 android:visibility="invisible"
                 android:id="@+id/text_bad_answer"
                 android:textColor="@color/design_textinput_error_color_light"
                 android:layout_gravity="center_horizontal" />
 
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminateDrawable="@drawable/spinner_ring"
-                android:indeterminateOnly="true"
-                android:id="@+id/progress_bar"
-                android:visibility="invisible"
-                android:layout_gravity="center_horizontal" />
+
 
             <Button
-
-                android:layout_gravity="center_horizontal"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
                 android:layout_width="wrap_content"
@@ -103,8 +104,13 @@
                 android:text="@string/str_w"
                 android:textColor="@color/background_color_yellow_l"
                 android:background="@drawable/style_button"
-                android:id="@+id/button_enter"/>
+                android:id="@+id/button_enter"
+                android:layout_gravity="center_horizontal" />
+
 
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
-</LinearLayout>
+
+
+</RelativeLayout>
