--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_main"
         android:layout_width="420dp"
-        android:layout_height="320dp"
+        android:layout_height="350dp"
         card_view:cardCornerRadius="@dimen/card_album_radius"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true">
@@ -106,6 +106,10 @@
                 android:background="@drawable/style_button"
                 android:id="@+id/button_enter"
                 android:layout_gravity="center_horizontal" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                />
 
 
         </LinearLayout>
