add shadow to ui

--- a/app/src/main/res/layout/board_reminder_layout.xml
+++ b/app/src/main/res/layout/board_reminder_layout.xml
@@ -4,23 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="600dp"
     android:layout_weight="240"
-    android:id="@+id/reminder_layout">
+    android:id="@+id/reminder_layout"
+    android:layout_marginBottom="@dimen/window_indent">
 
     <TextView
         android:layout_marginTop="8.5dp"
         android:layout_marginLeft="16.5dp"
         android:textColor="@color/background_color_white"
-        style="@android:style/TextAppearance.Medium"
+        android:textSize="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+
         android:text="@string/reminder"
         android:id="@+id/textView_reminder" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="57.5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="46dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rv_list_reminder" />
