--- a/app/src/main/res/layout/board_amount_layout.xml
+++ b/app/src/main/res/layout/board_amount_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/bg_amount"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="300dp"
     android:layout_weight="100"
     android:layout_marginBottom="@dimen/window_indent"
     android:id="@+id/wine_layout">
@@ -10,9 +10,9 @@
     <!---->
     <TextView
         android:layout_marginTop="8.5dp"
-        android:layout_marginLeft="@dimen/header_indent_left"
+        android:layout_marginLeft="20dp"
         android:textColor="@color/background_color_white"
-        style="@android:style/TextAppearance.Medium"
+        android:textSize="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
