--- a/app/src/main/res/layout/frame_top_layout.xml
+++ b/app/src/main/res/layout/frame_top_layout.xml
@@ -11,14 +11,15 @@
         <Button
 
             android:layout_marginRight="10dp"
-            android:layout_width="235dp"
-            android:layout_height="38dp"
+            android:layout_width="210dp"
+            android:layout_height="33dp"
             android:background="@drawable/style_button"
             android:drawableLeft="@drawable/add_item"
             android:text="@string/add_b"
             android:id="@+id/button_add"
             android:textColor="@color/background_color_yellow_l"
             android:onClick="onAddNewWine"
+            style="@android:style/TextAppearance.Small"
             android:clickable="true"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
