--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,31 +3,13 @@
     <color name="colorPrimary">#453E3E</color>
     <color name="colorPrimaryDark">#212121</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="background_color_white">#ffffff</color>
-    <color name="background_light">#e4e4e4</color>
-    <color name="transparent_background">#00000000</color>
-    <color name="background_color_green_dark">#fe0b600d</color>
-
-    <!--app uses color-->
-    <color name="background_color_green">#918824</color>
-    <color name="background_color_yellow_l">#fcf9ec</color>
-
-    <color name="background_color_green_light">#ef9bd9a4</color>
-    <color name="background_color_black">#bb000000</color>
-    <color name="background_color_blue">#e553c5f8</color>
-    <color name="background_color_blue_2">#fd104bec</color>
-    <color name="background_color_pink">#e5e7b8f1</color>  
-    <color name="background_color_light">#6da2cef1</color>
-    <color name="background_color_pink_dark">#bbda2191</color>
-    <color name="background_color_yellow">#e5d29b36</color>
-
-    <color name="background_color_brown">#e54c2316</color>
-    <color name="background_color_purple">#e5800080</color>
     <color name="background_color_red">#e5ff0000</color>
-    <color name="outside_color_trans">#00000000</color>
+    <color name="background_color_green">#918824</color>
+    <color name="background_color_yellow">#e5d29b36</color>
+    <color name="background_color_white">#ffffff</color>
+    <color name="background_color_yellow_l">#fcf9ec</color>
+    <color name="background_light">#e4e4e4</color>
     <color name="outside_color_gray">#66444444</color>
-    <color name="outside_color_pink">#84e7b8f1</color>
-    <color name="custom_showcase_bg">#b9002153</color>
-    <color name="ColorPrimary">#FF5722</color>
-    <color name="ColorPrimaryDark">#E64A19</color>
+    <color name="transparent_color_gray">#4b303030</color>
+
 </resources>
